--- a/Benbox/res/values/strings.xml
+++ b/Benbox/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
 
-    <string name="app_name">Notebox</string>
+    <string name="app_name">Benbox</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_splash">Splash</string>
-    <string name="title_activity_dashboard">Dashboard</string>
-    <string name="title_activity_nueva_nota">NuevaNota</string>
-    <string name="title_activity_listado_notas">ListadoNotas</string>
+<!--     <string name="title_activity_splash">Splash</string> -->
+<!--     <string name="title_activity_dashboard">Dashboard</string> -->
+<!--     <string name="title_activity_nueva_nota">NuevaNota</string> -->
+<!--     <string name="title_activity_listado_notas">ListadoNotas</string> -->
 
     <color name="black">#000000</color>
 
