* onclick on notes list now takes to a note activity, with a menu showing options to edit, delete and share the note * share and delete fully implemented, edit not implemented yet * half-baked widget, doesn't work.

--- a/Benbox/res/values/strings.xml
+++ b/Benbox/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="botonguardar">Guardar</string>
     <string name="title_activity_nota">Nota</string>
     <string name="title_activity_dropbox">Dropbox</string>
+    <string name="share">Compartir</string>
+    <string name="edit">Editar</string>
+    <string name="delete">Eliminar</string>
 
 </resources>
