--- a/Benbox/res/values/strings.xml
+++ b/Benbox/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="app_name">Benbox</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-<!--     <string name="title_activity_splash">Splash</string> -->
-<!--     <string name="title_activity_dashboard">Dashboard</string> -->
-<!--     <string name="title_activity_nueva_nota">NuevaNota</string> -->
-<!--     <string name="title_activity_listado_notas">ListadoNotas</string> -->
+    <!-- <string name="title_activity_splash">Splash</string> -->
+    <!-- <string name="title_activity_dashboard">Dashboard</string> -->
+    <!-- <string name="title_activity_nueva_nota">NuevaNota</string> -->
+    <!-- <string name="title_activity_listado_notas">ListadoNotas</string> -->
 
     <color name="black">#000000</color>
 
@@ -16,5 +16,8 @@
     <string name="share">Compartir</string>
     <string name="edit">Editar</string>
     <string name="delete">Eliminar</string>
+    <string name="title_activity_editar_nota">EditarNota</string>
+    <string name="title_activity_busqueda">Busqueda</string>
+    <string name="title_activity_resultado_busqueda">ResultadoBusqueda</string>
 
 </resources>
